--- a/GitHubSearcher/scenes/searcher/Searcher.storyboard
+++ b/GitHubSearcher/scenes/searcher/Searcher.storyboard
@@ -34,8 +34,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nCm-p6-XSr">
-                                <rect key="frame" x="8" y="72" width="242" height="40"/>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" verticalHuggingPriority="252" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="752" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nCm-p6-XSr">
+                                <rect key="frame" x="66" y="72" width="184" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="bpn-EY-nfW"/>
                                 </constraints>
@@ -83,6 +83,16 @@
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Filter"/>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c9d-Cy-9dm">
+                                <rect key="frame" x="8" y="72" width="50" height="40"/>
+                                <color key="backgroundColor" red="0.83741801979999997" green="0.83743780850000005" blue="0.83742713930000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="GHq-Jf-aNI"/>
+                                    <constraint firstAttribute="height" constant="40" id="bLs-RV-bVm"/>
+                                </constraints>
+                                <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Sort"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -91,13 +101,15 @@
                             <constraint firstItem="SUL-Id-DTI" firstAttribute="trailing" secondItem="9hg-sl-HgO" secondAttribute="trailing" id="BYR-5C-osm"/>
                             <constraint firstItem="aRo-ia-3as" firstAttribute="leading" secondItem="9hg-sl-HgO" secondAttribute="leading" id="D20-VX-agH"/>
                             <constraint firstItem="aRo-ia-3as" firstAttribute="trailing" secondItem="9hg-sl-HgO" secondAttribute="trailing" id="Mm9-pl-R0e"/>
-                            <constraint firstItem="nCm-p6-XSr" firstAttribute="leading" secondItem="9hg-sl-HgO" secondAttribute="leading" constant="8" id="Mrx-c4-Wha"/>
                             <constraint firstItem="9hg-sl-HgO" firstAttribute="bottom" secondItem="SUL-Id-DTI" secondAttribute="bottom" id="Pko-PA-iIL"/>
+                            <constraint firstItem="c9d-Cy-9dm" firstAttribute="leading" secondItem="9hg-sl-HgO" secondAttribute="leading" constant="8" id="UL0-du-w36"/>
                             <constraint firstItem="9hg-sl-HgO" firstAttribute="trailing" secondItem="nCm-p6-XSr" secondAttribute="trailing" constant="70" id="URJ-MI-S7h"/>
+                            <constraint firstItem="nCm-p6-XSr" firstAttribute="leading" secondItem="c9d-Cy-9dm" secondAttribute="trailing" constant="8" id="V6l-VM-nYS"/>
                             <constraint firstItem="aRo-ia-3as" firstAttribute="top" secondItem="LFm-h0-Iyh" secondAttribute="bottom" constant="8" id="Vrc-gi-f6s"/>
                             <constraint firstItem="LFm-h0-Iyh" firstAttribute="leading" secondItem="nCm-p6-XSr" secondAttribute="trailing" constant="8" id="a55-gJ-dX7"/>
                             <constraint firstItem="SUL-Id-DTI" firstAttribute="leading" secondItem="9hg-sl-HgO" secondAttribute="leading" id="imR-Cj-OTx"/>
                             <constraint firstItem="nCm-p6-XSr" firstAttribute="top" secondItem="9hg-sl-HgO" secondAttribute="top" constant="8" id="jfp-Ka-LVg"/>
+                            <constraint firstItem="aRo-ia-3as" firstAttribute="top" secondItem="c9d-Cy-9dm" secondAttribute="bottom" constant="8" id="wEt-1Q-aVc"/>
                             <constraint firstItem="9hg-sl-HgO" firstAttribute="trailing" secondItem="LFm-h0-Iyh" secondAttribute="trailing" constant="8" id="zhU-df-QLo"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="9hg-sl-HgO"/>
@@ -114,7 +126,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aow-8d-WYX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="29.600000000000001" y="168.6656671664168"/>
+            <point key="canvasLocation" x="28.125" y="167.95774647887325"/>
         </scene>
     </scenes>
 </document>
